:writing_hand: add outline for shift-auto-generate

--- a/articles/cde1904b144d2f.md
+++ b/articles/cde1904b144d2f.md
@@ -1,7 +1,23 @@
 ---
-title: ""
-emoji: "🙆"
+title: "数理最適化で勤務シフト表を自動生成してみた"
+emoji: "👩‍⚕️"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: []
 published: false
 ---
+
+## シフトって大変だよね？
+
+こちらで具体的なシフトの問題や実際にあなたや他の人々が経験したエピソードを織り交ぜると、読者との共感を得られると思います。
+
+## pulp と deap はシフトの救世主かもしれない
+
+このセクションでは、pulp と deap がどのようにシフト問題を解決に導くのか、その特性やメリットを明確に述べることが大切です。
+
+## モデルを作ってみた
+
+こちらでは、実際のモデル構築のプロセスや試行錯誤を共有することで、読者にあなたの取り組みをリアルに感じてもらうと良いでしょう。
+
+## 実際に使ってみた感想
+
+成果や驚きの点、さらなる改善点などを具体的に述べることで、あなたの体験をもとにした有益な情報を提供してください。
